# agents

./: .markdownlint.json  .pre-commit-config.yaml  .pylintrc  Makefile  Makefile.common  README.md  pyproject.toml
.cursor/: rules
agents/data-scraper/: Makefile  README.md  setup.cfg
agents/data-scraper/docker/: Dockerfile
agents/data-scraper/docs/: architecture-simplification.md  architecture.md  deployment.md  roadmap.md  separated_workflow.md
agents/data-scraper/examples/config/apis/: github-api.yaml  weather-api.yaml
agents/data-scraper/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
agents/data-scraper/k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
agents/data-scraper/requirements/: requirements-dev.txt  requirements-minimal.txt  requirements.txt
agents/data-scraper/src/: __init__.py
agents/data-scraper/src/agent/: __init__.py  data_scraper_agent.py  main.py
agents/data-scraper/src/clients/: __init__.py  api_client.py
agents/data-scraper/src/config/: __init__.py  config_loader.py
agents/data-scraper/src/models/: __init__.py  api_config.py
agents/data-scraper/tests/: __init__.py  conftest.py
agents/data-scraper/tests/e2e/: __init__.py
agents/data-scraper/tests/unit/: __init__.py  test_api_client.py  test_basic.py  test_cli.py  test_config_loader.py  test_data_scraper_agent.py  test_models.py
agents/llm-release-radar/: Makefile
agents/llm-release-radar/docs/: architecture.md
agents/llm-release-radar/requirements/: requirements-dev.txt  requirements.txt
agents/llm-release-radar/src/: __init__.py
agents/llm-release-radar/tests/: conftest.py
agents/research-copilot/: .env.example  Makefile  README.md  setup.cfg
agents/research-copilot/docker/: .dockerignore  Dockerfile
agents/research-copilot/docs/: architecture-simplification.md  architecture.md  deployment.md  roadmap.md  separated_workflow.md
agents/research-copilot/k8s/: ARCHITECTURE_SUMMARY.md  MIGRATION.md  README.md  configmap.yaml  cronjob.yaml  deployment-simplified.yaml  deployment.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service-account.yaml  service.yaml
agents/research-copilot/k8s/base/: configmap.yaml  cronjob.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secrets.yaml  service-account.yaml  service.yaml
agents/research-copilot/k8s/base/configmaps/: llm-research-template.yaml  tech-research-template.yaml
agents/research-copilot/k8s/configmaps/: market-research-template.yaml
agents/research-copilot/k8s/overlays/development/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml
agents/research-copilot/k8s/overlays/production/: configmap-patch.yaml  cronjob-patch.yaml  deployment-patch.yaml  kustomization.yaml
agents/research-copilot/k8s/overlays/staging/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml
agents/research-copilot/requirements/: requirements.txt
agents/research-copilot/scripts/: deploy.sh
agents/research-copilot/src/: __init__.py
agents/research-copilot/src/agent/: __init__.py  local_analysis_agent.py  main.py  main.py.backup  web_scraping_agent.py
agents/research-copilot/src/clients/: __init__.py  content_analyzer.py  llm_client.py  llm_researcher.py  local_analysis_client.py  notion_client.py  web_scraping_research_client.py
agents/research-copilot/src/config/: __init__.py  config_loader.py  settings.py
agents/research-copilot/src/models/: __init__.py  news.py  research_config.py
agents/research-copilot/src/utils/: data_input.py
agents/research-copilot/tests/: conftest.py
agents/research-copilot/tests/unit/: test_config.py  test_config_loader.py  test_content_analyzer.py  test_llm_researcher.py  test_local_analysis_agent.py  test_local_analysis_client.py  test_models.py  test_notion_client.py  test_research_config.py  test_web_scraping_agent.py  test_web_scraping_research_client.py
docs/: research-copilot.md
